[package]
name = "hull_white"
version = "0.5.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/hull_white_rust"
repository = "https://github.com/phillyfan1138/hull_white_rust"
readme = "README.md"
license = "MIT"
description = "Pricing functions assuming a Hull White short rate"
edition = "2018"

[dependencies]
nrfind = "1.0.2"
black_scholes = "0.5.0"
binomial_tree = "0.4.0"

[dev-dependencies]
approx = "0.2.0"
rand = "0.5"
criterion = "0.2"

[[bench]]
name = "bench"
harness = false